Fix #94148: Top bar, Status bar Header Colors Differ from Theme Setting

Fixes the Top and Status bars having their specified theme colors
incorrectly modified by highlight effect intended for active editor
headers only

Pull Request: https://projects.blender.org/blender/blender/pulls/111265